Added fixes to startup scripts allowing harness to starrt in jdk9.